fixed exception handling and created request abd response bodies